# Smart-Cleaner

./: Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
data/: sysclean.desktop
src/: app.rs  config.rs  main.rs
src/model/: dep_tree.rs  mod.rs  package.rs  package_source.rs  removal_plan.rs
src/remover/: executor.rs
src/scanner/: appimage.rs  desktop_entries.rs  desktop_scanner.rs  flatpak.rs  maintenance.rs  mod.rs  pacman.rs  registry.rs
src/ui/: confirmation_dialog.rs  graph_layout.rs  graph_node.rs  graph_view.rs  maintenance_view.rs  mod.rs  progress_view.rs
src/ui/window/: imp.rs  mod.rs
