[package]
name = "sysclean"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sysclean"
path = "src/main.rs"

[dependencies]
gtk = { package = "gtk4", version = "0.11" }
adw = { package = "libadwaita", version = "0.9", features = ["v1_5"] }
which = "7"
bytesize = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
